# ai-agent-ds-mentor

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  main.py  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
mentor/: __init__.py  __main__.py  _version.py  app.py  cli.py  competencies.py  db.py  progress.py  quiz.py  telegram.py  textutil.py
mentor/data/: __init__.py  competencies.json  questions.json
scripts/: run.ps1  setup.ps1  test.ps1
tests/: test_app.py  test_app_daily.py  test_app_quiz.py  test_cli.py  test_competencies.py  test_db_competency.py  test_db_dedup.py  test_db_schema.py  test_mastered.py  test_progress.py  test_quiz.py  test_search_bank.py  test_telegram.py  test_textutil.py  test_textutil_quiz.py
