[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-ds-mentor"
description = "Telegram bot for learning Data Science with AI (quiz + SQLite progress)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests",
  "python-dotenv",
]
dynamic = ["version"]

[project.scripts]
mentor = "mentor.cli:entrypoint"

[tool.setuptools.dynamic]
version = {attr = "mentor._version.__version__"}

[tool.setuptools]
packages = ["mentor", "mentor.data"]

[tool.setuptools.package-data]
mentor = ["py.typed", "data/questions.json"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["mentor"]

